--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
